--- a/app.json
+++ b/app.json
@@ -1,14 +1,6 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/logs/logs"
-  ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
-  },
-  "style": "v2",
-  "sitemapLocation": "sitemap.json"
+    "Pages/home/home",
+    "Pages/about/about"
+  ]
 }
